# web/rout.go
@@ -81,10 +81,11 @@ func Run() {
 	r.PUT("/devices/expire", api.UpdateDevicesExpire) // 更改设备过期时间
 	r.DELETE("/devices", api.DevicesDel)              // 删除设备
 	// 用户
-	r.GET("/users", api.GetUsers)                   // 获取用户列表
-	r.DELETE("/users", api.UserDel)                 // 删除用户
-	r.PUT("/users/expire", api.UpdateDevicesExpire) // 更改用户过期时间
-	r.PUT("/users/status", api.UpdateUserStatus)    // 更改用户状态
+	r.GET("/users", api.GetUsers)                // 获取用户列表
+	r.DELETE("/users", api.UserDel)              // 删除用户
+	r.PUT("/users/expire", api.UpdateUserExpire) // 更改用户过期时间
+	r.PUT("/users/status", api.UpdateUserStatus) // 更改用户状态
+	r.PUT("/users/password", api.UpdatePassword) // 更改用户密码
 	// 配置
 	r.PUT("/configState", api.UpdateConfigState) // 更改状态配置
 
